fix: got the top menu to toggle on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,13 @@ body {
 /* Header */
 #header {
     text-align: right;
-    padding: 20px;
+    padding: 0 1rem;
     width: 100%;
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
     flex-direction: column;
     background-color: burlywood;
+    z-index: 99;
 }
 
 header a {
@@ -41,7 +42,7 @@ header a {
 }
 
 #menu>li {
-    display: inline;
+    display: block;
     padding: 10px;
 }
 
@@ -51,13 +52,12 @@ header a {
 
 /* Navbar styles with dropdown toggle */
 nav {
-    position: absolute;
+    position:relative;
     width: 100%;
-    left: 0;
     padding: 0;
-    box-shadow: 0 2px 2px #3a3a3a;
+    /* box-shadow: 0 2px 2px #3a3a3a; */
     display: none;
-    top: 100%;
+    background-color: inherit;
 }
 
 /* Nav toggle */
@@ -91,7 +91,8 @@ nav {
 .bioright {
     justify-content: right;
     align-items: flex-end;
-    text-align: right;
+    text-align:justify;
+    padding-left: 10px;
 }
 
 .responsive {
